# 2D-Robot-Sim

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docker/: entrypoint.sh
examples/: 01_single_robot_apf.py  record_demo.py
src/sr_sim/core/: __init__.py  physics.py  robot.py  world.py
src/sr_sim/planners/: __init__.py  potential_field.py
src/sr_sim/render/: __init__.py  matplotlib_view.py  pygame_view.py
tests/: test_kinematics.py
