[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sr-sim"
version = "0.1.0"
description = "Polished 2D robotics simulation platform — swarm, path planning, rescue scenarios, and more"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["robotics", "simulation", "swarm", "path-planning", "gymnasium"]
dependencies = [
    "numpy>=1.26",
    "pygame>=2.5",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "scikit-image>=0.22",
]

[project.optional-dependencies]
rl       = ["gymnasium>=0.29"]
quantum  = ["qiskit>=1.0", "qiskit-aer>=0.13"]
dev      = ["pytest>=8.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
